# skillmap

./: .gitignore  CHANGELOG.md  README.md  justfile  pyproject.toml
docs/: skillmap_descriptor.md
docs/examples/: hello_world.toml
skillmap/: main.py  skillmap_parser.py  skillmap_visitor.py  theme_loader.py
skillmap/nodes/: common.py  group_node.py  progress_bar.py  skill_node.py  skillmap_node.py
skillmap/themes/: earth.theme  grape.theme  grass.theme  ocean.theme  pale.theme  rose.theme
tests/: skillmap_parser_test.py  skillmap_visitor_test.py  url_shortener.toml  urlshortener.toml
tests/nodes/: skill_node_test.py  skillmap_node_test.py
